Add swagger Senjata
